--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv==1.0.0
 pydantic==2.9.0
 pydantic-settings==2.1.0
 sqlalchemy==2.0.25
+psycopg2-binary==2.9.9
 bcrypt==4.1.2
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
@@ -12,3 +13,4 @@ openai==1.12.0
 requests==2.31.0
 passlib[bcrypt]==1.7.4
 email-validator==2.1.0
+
