--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,9 @@ fastapi==0.104.1
 uvicorn==0.24.0
 praw==7.7.1
 python-dotenv==1.0.0
-pydantic==2.9.0
+pydantic==2.5.0
 pydantic-settings==2.1.0
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
 bcrypt==4.1.2
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
@@ -13,4 +12,5 @@ openai==1.12.0
 requests==2.31.0
 passlib[bcrypt]==1.7.4
 email-validator==2.1.0
-
+pandas==2.1.4
+openpyxl==3.1.2
